fix dark mode

--- a/snail/source/css/dusign-dark.css
+++ b/snail/source/css/dusign-dark.css
@@ -351,7 +351,7 @@ pre code {
 @media only screen and (max-width: 767px) {
   .navbar-default .navbar-collapse {
     border: none;
-    background: white;
+    background: rgb(34, 38, 49);
     box-shadow: 0px 5px 10px 2px rgba(0, 0, 0, 0.2);
     box-shadow: rgba(0, 0, 0, 0.117647) 0px 1px 6px, rgba(0, 0, 0, 0.239216) 0px 1px 4px;
     border-radius: 2px;
@@ -394,6 +394,9 @@ pre code {
   #huxblog_navbar.in .navbar-collapse {
     transform: scaleY(1);
     -webkit-transform: scaleY(1);
+  }
+  #huxblog_navbar.in .navbar-collapse .navbar-nav > li > a:hover {
+    color: rgb(199, 200, 206);
   }
   #huxblog_navbar.in li {
     opacity: 1;
